Bug 224555 - Akregator crashes on 'New' Action invoked by key shortcut
Summary: Akregator crashes on 'New' Action invoked by key shortcut
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-28 01:09 UTC by Marko Dimjasevic
Modified: 2010-02-07 13:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marko Dimjasevic 2010-01-28 01:09:10 UTC
Application that crashed: akregator
Version of the application: 1.5.4
KDE Version: 4.3.5 (KDE 4.3.5) "release 2"
Qt Version: 4.5.3
Operating System: Linux 2.6.31.8-0.1-default i686
Distribution: "openSUSE 11.2 (i586)"

What I was doing when the application crashed:
Akregator crashes when Ctrl+N is pressed in Akregator's main window. It happens everytime I try it. Ctrl+N is a shortcut for 'New' Action in Settings -> Configure Shortcuts menu item. I can't find out what 'New' refers to, but it has the same icon as 'Open in Tab' Action.

 -- Backtrace:
Application: Akregator (akregator), signal: Segmentation fault
[KCrash Handler]
#6  d_func (this=<value optimized out>) at itemviews/qitemselectionmodel.h:128
#7  QItemSelectionModel::selection (this=<value optimized out>) at itemviews/qitemselectionmodel.cpp:1456
#8  0xb6a2af96 in QItemSelectionModel::selectedRows (this=0x0, column=0) at itemviews/qitemselectionmodel.cpp:1401
#9  0xb2f70bb4 in Akregator::SelectionController::selectedArticles (this=0x8238248) at /usr/src/debug/kdepim-4.3.5/akregator/src/selectioncontroller.cpp:151
#10 0xb2fc3dcc in (anonymous namespace)::setSelectedArticleStatus (controller=<value optimized out>, status=<value optimized out>) at /usr/src/debug/kdepim-4.3.5/akregator/src/mainwidget.cpp:1028
#11 0xb2fc8ea0 in Akregator::MainWidget::qt_metacall (this=0x81c7b38, _c=InvokeMetaMethod, _id=52, _a=0xbfe0e588) at /usr/src/debug/kdepim-4.3.5/build/akregator/src/mainwidget.moc:174
#12 0xb6e5b864 in QMetaObject::activate (sender=0x81d0750, from_signal_index=5, to_signal_index=6, argv=0xbfe0e588) at kernel/qobject.cpp:3113
#13 0xb6e5bd41 in QMetaObject::activate (sender=0x81d0750, m=0xb6ce5108, from_local_signal_index=1, to_local_signal_index=2, argv=0xbfe0e588) at kernel/qobject.cpp:3207
#14 0xb64850c5 in QAction::triggered (this=0x81d0750, _t1=false) at .moc/release-shared/moc_qaction.cpp:236
#15 0xb64866f2 in QAction::activate (this=0x81d0750, event=Trigger) at kernel/qaction.cpp:1167
#16 0xb64893a0 in QAction::event (this=0xbfe0e301, e=0x0) at kernel/qaction.cpp:1086
#17 0xb730820f in KAction::event (this=0x81d0750, event=0xbfe0e9b8) at /usr/src/debug/kdelibs-4.3.5/kdeui/actions/kaction.cpp:88
#18 0xb648b8fc in QApplicationPrivate::notify_helper (this=0x8088cf0, receiver=0x81d0750, e=0xbfe0e9b8) at kernel/qapplication.cpp:4065
#19 0xb649334e in QApplication::notify (this=0xbfe10858, receiver=0x81d0750, e=0xbfe0e9b8) at kernel/qapplication.cpp:3605
#20 0xb73f5521 in KApplication::notify (this=0xbfe10858, receiver=0x81d0750, event=0xbfe0e9b8) at /usr/src/debug/kdelibs-4.3.5/kdeui/kernel/kapplication.cpp:302
#21 0xb6e4532e in QCoreApplication::notifyInternal (this=0xbfe10858, receiver=0x81d0750, event=0xbfe0e9b8) at kernel/qcoreapplication.cpp:610
#22 0xb64c5b95 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:213
#23 QShortcutMap::dispatchEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qshortcutmap.cpp:884
#24 0xb64c7b82 in QShortcutMap::tryShortcutEvent (this=0x8088d90, o=0x826b638, e=0xbfe0ed54) at kernel/qshortcutmap.cpp:369
#25 0xb64945ef in QApplication::notify (this=0x0, receiver=0x826b638, e=0xbfe0ed54) at kernel/qapplication.cpp:3647
#26 0xb73f5521 in KApplication::notify (this=0xbfe10858, receiver=0x826b638, event=0xbfe0ed54) at /usr/src/debug/kdelibs-4.3.5/kdeui/kernel/kapplication.cpp:302
#27 0xb6e4532e in QCoreApplication::notifyInternal (this=0xbfe10858, receiver=0x826b638, event=0xbfe0ed54) at kernel/qcoreapplication.cpp:610
#28 0xb648c81d in sendSpontaneousEvent (event=<value optimized out>, receiver=<value optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:216
#29 qt_sendSpontaneousEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qapplication.cpp:4975
#30 0xb6529a53 in QKeyMapper::sendKeyEvent (keyWidget=0x826b638, grab=false, type=KeyPress, code=78, modifiers=) at kernel/qkeymapper_x11.cpp:1678
#31 0xb652c092 in QKeyMapperPrivate::translateKeyEvent (this=0x80adea8, keyWidget=0x826b638, event=0xbfe1051c, grab=false) at kernel/qkeymapper_x11.cpp:1648
#32 0xb65020ce in QApplication::x11ProcessEvent (this=0xbfe10858, event=0xbfe1051c) at kernel/qapplication_x11.cpp:3443
#33 0xb652db68 in x11EventSourceDispatch (s=0x807ca00, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0xb4eb44c2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#35 0xb4eb7d98 in ?? () from /usr/lib/libglib-2.0.so.0
#36 0xb4eb7ebe in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#37 0xb6e71011 in QEventDispatcherGlib::processEvents (this=0x805b0c8, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#38 0xb652d29a in QGuiEventDispatcherGlib::processEvents (this=0x805b0c8, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#39 0xb6e4398d in QEventLoop::processEvents (this=0xbfe107d4, flags=) at kernel/qeventloop.cpp:149
#40 0xb6e43dd9 in QEventLoop::exec (this=0xbfe107d4, flags=...) at kernel/qeventloop.cpp:201
#41 0xb6e46270 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#42 0xb648b774 in QApplication::exec () at kernel/qapplication.cpp:3525
#43 0x0804fa41 in main (argc=5, argv=0xbfe109a4) at /usr/src/debug/kdepim-4.3.5/akregator/src/main.cpp:103

Reported using DrKonqi
Comment 1 Frank Osterfeld 2010-02-06 22:30:59 UTC
SVN commit 1086319 by osterfeld:

don't crash when no selection model exists (as there is no feed
selected)
BUG:224555

 M  +4 -0      selectioncontroller.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1086319
Comment 2 Frank Osterfeld 2010-02-07 13:02:50 UTC
SVN commit 1086452 by osterfeld:

forwardport

SVN commit 1086319 by osterfeld:

don't crash when no selection model exists (as there is no feed
selected)
BUG:224555

 M  +4 -0      selectioncontroller.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1086452