forwardport

SVN commit 1086319 by osterfeld:

don't crash when no selection model exists (as there is no feed
selected)
BUG:224555

svn path=/trunk/KDE/kdepim/akregator/; revision=1086452